--- a/export-import/package.json
+++ b/export-import/package.json
@@ -1,7 +1,7 @@
 {
   "name": "export-import",
   "version": "1.0.0",
-  "main": "modules/export.js",
+  "main": "modules/data.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node modules/server_node/server.js"
